fix(web): prevent label wrapping in step 3
On large enough screens, the "stepper" labels will now avoid wrapping to
two lines in the "Build Database" step. When this no longer fits on the
screen, they will wrap again as normal / before.

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -11,7 +11,7 @@
 @theme {
 	--breakpoint-gp: 70rem;
 	--breakpoint-ag: 54rem;
-	--breakpoint-bd: 37rem;
+	--breakpoint-bd: 38rem;
 }
 
 @layer base {
